saving before change to main todos template

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <script id="main_list_template" type="text/x-handlebars-template">
     <ul>
       {{#each toDos}}
-      <li data-id="{{id}}" class="{{completed}}">
+      <li data-id="{{id}}" class="{{completed}} main_list_item">
         <div>
           <img class="checkbox" src="https://d3905n0khyu9wc.cloudfront.net/assessment/todo-js/images/checkbox.png"></img>
           <a class="todo_list_link" href="#">{{title}} - {{dueDateStr}}</a>
