template change fixed list click mark bug

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   <script id="main_list_template" type="text/x-handlebars-template">
     <ul>
       {{#each toDos}}
-      <li data-id="{{id}}" class="{{completed}} main_list_item">
-        <div>
+      <li data-id="{{id}}" class="{{completed}}">
+        <div class="main_list_item">
           <img class="checkbox" src="https://d3905n0khyu9wc.cloudfront.net/assessment/todo-js/images/checkbox.png"></img>
           <a class="todo_list_link" href="#">{{title}} - {{dueDateStr}}</a>
         </div>
