added responsive css styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
     </nav>
     <main>
+      <div id="hamburger"></div>
       <h2><span id="main_list_title">All Todos</span><span id="main_list_count">2</span></h2>
       <a id="add_new_todo" href="#">Add new todo</a>
     </main>
@@ -115,7 +116,7 @@
           <img class="checkbox" src="https://d3905n0khyu9wc.cloudfront.net/assessment/todo-js/images/checkbox.png"></img>
           <a class="todo_list_link" href="#">{{title}} - {{dueDateStr}}</a>
         </div>
-        <img class="trash" src="https://d3905n0khyu9wc.cloudfront.net/assessment/todo-js/images/trash.png"</img>
+        <div class="trash"</div>
       </li>
       {{/each}}
     </ul>
