--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Peter's Todo Lists</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.8/handlebars.min.js"></script>
+    <script src="./todos.js"></script>
     <script src="./application.js"></script>
     <link rel="stylesheet" href="./main.css">
   </head>
